root/apps/services/billing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: billing, namespace: platform }
spec:
  replicas: 1
  selector: { matchLabels: { app: billing } }
  template:
    metadata: { labels: { app: billing } }
    spec:
      containers:
        - name: billing
          image: rg.fr-par.scw.cloud/pandormedia/qoffice-billing:preprod-latest
          ports: [ { containerPort: 8080 } ]
